@@ -247,7 +247,7 @@ public class ExecutorService {
             // first find the normal ended child tasks and send result
             Optional<State.Type> state;
             try {
-                state = flowableParent.resolveState(runContext, execution, parentTaskRun);
+                 state = flowableParent.resolveState(runContext, execution, parentTaskRun);
             } catch (Exception e) {
                 // This will lead to the next task being still executed, but at least Kestra will not crash.
                 // This is the best we can do, Flowable task should not fail, so it's a kind of panic mode.
@@ -268,9 +268,17 @@ public class ExecutorService {
                         Output outputs = flowableParent.outputs(runContext);
                         Map<String, Object> outputMap = MapUtils.merge(workerTaskResult.getTaskRun().getOutputs(), outputs == null ? null : outputs.toMap());
                         Variables variables = variablesService.of(StorageContext.forTask(workerTaskResult.getTaskRun()), outputMap);
+                        /// flowable attempt state transition to terminated
+                            List<TaskRunAttempt> attempts = Optional.ofNullable(parentTaskRun.getAttempts())
+                                .map(ArrayList::new)
+                                .orElseGet(ArrayList::new);
+                            State.Type endedState=endedTask.get().getTaskRun().getState().getCurrent();
+                            TaskRunAttempt updated = attempts.getLast().withState(endedState);
+                            attempts.set( attempts.size() - 1, updated);
                         return Optional.of(new WorkerTaskResult(workerTaskResult
                             .getTaskRun()
                             .withOutputs(variables)
+                            .withAttempts(attempts)
                         ));
                     } catch (Exception e) {
                         runContext.logger().error("Unable to resolve outputs from the Flowable task: {}", e.getMessage(), e);
@@ -320,7 +328,6 @@ public class ExecutorService {
 
     private List<TaskRun> childNextsTaskRun(Executor executor, TaskRun parentTaskRun) throws InternalException {
         Task parent = executor.getFlow().findTaskByTaskId(parentTaskRun.getTaskId());
-
         if (parent instanceof FlowableTask<?> flowableParent) {
             // Count the number of flowable tasks executions, some flowable are being called multiple times,
             // so this is not exactly the number of flowable taskruns but the number of times they are executed.
@@ -375,6 +382,7 @@ public class ExecutorService {
                     Output outputs = flowableTask.outputs(runContext);
                     Variables variables = variablesService.of(StorageContext.forTask(taskRun), outputs);
                     taskRun = taskRun.withOutputs(variables);
+
                 } catch (Exception e) {
                     runContext.logger().warn("Unable to save output on taskRun '{}'", taskRun, e);
                 }
@@ -1065,14 +1073,12 @@ public class ExecutorService {
 
         executor.getWorkerTasks()
             .removeIf(workerTask -> {
-                if (!(workerTask.getTask() instanceof ExecutionUpdatableTask)) {
+                if (!(workerTask.getTask() instanceof ExecutionUpdatableTask executionUpdatingTask)) {
                     return false;
                 }
 
-                var executionUpdatingTask = (ExecutionUpdatableTask) workerTask.getTask();
-
                 try {
-                    // handle runIf
+                    // Skip task if runIf condition is false
                     if (!TruthUtils.isTruthy(workerTask.getRunContext().render(workerTask.getTask().getRunIf()))) {
                         executor.withExecution(
                             executor
@@ -1083,19 +1089,28 @@ public class ExecutorService {
                         return false;
                     }
 
+                    TaskRun runningTaskRun = workerTask
+                        .getTaskRun()
+                        .withAttempts(List.of(TaskRunAttempt.builder().state(new State().withState(State.Type.RUNNING)).build()))
+                        .withState(State.Type.RUNNING);
+
                     executor.withExecution(
                         executionUpdatingTask.update(executor.getExecution(), workerTask.getRunContext())
-                            .withTaskRun(workerTask.getTaskRun().withState(State.Type.RUNNING)),
+                            .withTaskRun(runningTaskRun),
                         "handleExecutionUpdatingTask.updateExecution"
                     );
 
-                    var taskState = executionUpdatingTask.resolveState(workerTask.getRunContext(), executor.getExecution()).orElse(State.Type.SUCCESS);
+                    var terminalState = executionUpdatingTask
+                        .resolveState(workerTask.getRunContext(), executor.getExecution())
+                        .orElse(State.Type.SUCCESS);
+
+                    TaskRunAttempt terminalAttempt = runningTaskRun.lastAttempt().withState(terminalState);
+
                     workerTaskResults.add(
                         WorkerTaskResult.builder()
-                            .taskRun(workerTask.getTaskRun().withAttempts(
-                                        Collections.singletonList(TaskRunAttempt.builder().state(new State().withState(taskState)).build())
-                                    )
-                                    .withState(taskState)
+                            .taskRun(runningTaskRun
+                                .withAttempts(List.of(terminalAttempt))
+                                .withState(terminalState)
                             )
                             .build()
                     );
